--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.4
   flutter_swiper: ^1.1.6
-  http: ^0.12.0+4
-  intl: ^0.16.1
-  provider: ^5.0.0
+  http: ^0.13.3
+  intl: ^0.17.0
+  provider: ^6.0.1
   palette_generator: ^0.3.0
+  supabase_flutter: ^0.2.9
 
 dev_dependencies:
   flutter_test:
